# hairtryon

./: .gitignore  .pre-commit-config.yaml  TODO.md  readme.md
backend/: .flake8  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  run.py  start.sh  test.py
backend/.github/workflows/: cd.yaml  ci.yaml
backend/app/: admin.py  alembic.ini  db.py  main.py  middleware.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 0e9c3d89ccd1_fix_type_jti.py  1a6da54da612_add_like_dislike.py  (+13 more)
backend/app/api/: router.py
backend/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  lifespan.py  logging.py  ratelimiting.py  telementry.py
backend/app/enums/: __init__.py  image.py  payment.py  style.py  tokens.py
backend/app/instance/: test.db
backend/app/middleware/: __init__.py  timeit.py
backend/app/models/: __init__.py  blacklist_tokens.py  generated_images.py  style.py  transactions.py  user.py
backend/app/repository/: __init__.py  image_respository.py  style_repository.py  token_repository.py  transaction_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  image_gen.py  image_upload.py  payment.py  user.py
backend/app/services/: __init__.py  auth.py  blacklist_token.py  google_auth.py  image_gen.py  image_upload.py  mail_service.py  payment.py
backend/app/templates/: reset_password.html  verify_login.html  verify_signup.html
backend/app/utils/: __init__.py  auth.py  helpers.py  prompt_builder.py  send_email.py
(+135 files in other folders)
